fix: solve overflow issue

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -9,6 +9,8 @@
     font-family: "Mona Sans", sans-serif;
 }
 
-html {
+body {
     font-size: 16px;
+    width: 100%;
+    overflow-x: hidden;
 }
